2005-01-04  Francois Dumont  <dums@stlport...>

	* doc/README.evc3: patched by Michael Fink

	* build/lib/configure.bat: warning fix thanks Michael Fink.

	* build/test/unit/nmake-src-prefix.mak: fixed thanks Michael Fink.

2005-01-02  Francois Dumont  <dums@stlport...>

	* stlport/stl/_string_sum.h, _string_operators.h: Fix of a assignment bug
	in the append method taking a C string wrapper. Modification of the __bstr_sum
	get_allocator method to avoid an unusefull allocation.

	* build/lib/nmake-src-prefix.mak: Add of missing rules for .c and .rc file type.

2004-12-29  Francois Dumont  <dums@stlport...>

	* stlport/stl/_hashtable.c: Fix missing allocator argument in new slist
	construction and band number of buckets thanks See Wong report.
	
	* test/unit/unordered_test.cpp: Add of a test to report the previous
	problem.

	* build/Makefiles/nmake/vc-common.mak, evc-common.mak: Generalization of the 
	/DMACRO compiler command rather than /D "MACRO".

	* test/unit/string_test.cpp: Creation of a new test case for string template
	expression.

	* stlport/stl/_string_sum.h, _string_sum_methods.h: Fixing of many bugs in the
	string template expressions implementation.
	
	* stlport/stl/_tree.c: Add of a comment in the _M_increment method explaining
	a surprising checks thanks Ulrich Eckhardt.

2004-12-24  Petr Ovtchenkov  <ptr@island...>

	* build/Makefiles: makesystem moved here from src/Makefiles

	* build/lib: makefiles moved here from src catalog.

	* build/test/unit: makefiles moved here from test/unit catalog.

	* INSTALL: updated.

	* README: updated.

2004-12-23  Francois Dumont  <dums@stlport...>

	* stlport/stl/_vector.h, _vector.c: Fix of the code for movable types
	in call to push_back or insert of a value in case of auto referencing
	thanks Benjamin Redelings.
	
	* stlport/stl/_hashtable.c: Fix of the _M_copy method thanks Timothy
	Tenebekov.
	
2004-12-22  Francois Dumont  <dums@stlport...>
